syntax = "proto3";

package com.criteo.hadoop.garmadon;

option java_package = "com.criteo.hadoop.garmadon.event.proto";
option java_outer_classname = "DataAccessEventProtos";

message PathEvent {
    string path = 1;
    string type = 2;
}

message FsEvent {
    string src_path = 1;
    string dst_path = 2;
    string action = 3;
    string uri = 4;
    uint64 method_duration_millis = 5;
    string hdfs_user = 6;
}

message StateEvent {
    string state = 1;
}